--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,33 +21,17 @@ jobs:
             git pull
 
       - name: Upload Google credentials.json
+        uses: appleboy/ssh-action@v1
         env:
           GCP_SHEETS_JSON_B64: ${{ secrets.GCP_SHEETS_JSON_B64 }}
-        run: |
-          echo "$GCP_SHEETS_JSON_B64" | base64 -d > credentials.json
-    
-      - name: Copy credentials to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.SSH_PORT || 22 }}
-          source: "credentials.json"
-          target: "/tmp/credentials.json"
-    
-      - name: Move credentials to secure path
-        uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.SSH_PORT || 22 }}
           script: |
-            sudo mkdir -p /etc/secrets
-            sudo mv /tmp/credentials.json /etc/secrets/google-credentials.json
-            sudo chmod 600 /etc/secrets/google-credentials.json
-            sudo chown root:root /etc/secrets/google-credentials.json
+            cd /usr/src/marketing-bot
+            echo "$GCP_SHEETS_JSON_B64" | base64 -d > google-credentials.json
 
       - name: Build image
         uses: appleboy/ssh-action@v1
@@ -62,6 +46,13 @@ jobs:
 
       - name: Docker compose start
         uses: appleboy/ssh-action@v1
+        env:
+          API_HASH: ${{ secrets.API_HASH }}
+          API_ID: ${{ secrets.API_ID }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          LOGGING_CHAT_ID: ${{ secrets.LOGGING_CHAT_ID }}
+          PARSER_CHAT_ID: ${{ secrets.PARSER_CHAT_ID }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
@@ -70,4 +61,10 @@ jobs:
           script: |
             cd /usr/src/marketing-bot
             docker compose down
+            API_HASH="$API_HASH" \
+            API_ID="$API_ID" \
+            BOT_TOKEN="$BOT_TOKEN" \
+            LOGGING_CHAT_ID="$LOGGING_CHAT_ID" \
+            PARSER_CHAT_ID="$PARSER_CHAT_ID" \
+            OPENAI_API_KEY="$OPENAI_API_KEY" \
             docker compose up
