Adds vk parsing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,5 @@ services:
             - BOT_TOKEN
             - LOGGING_CHAT_ID
             - PARSER_CHAT_ID
+            - PARSER_VK_CHAT_ID
             - OPENAI_API_KEY
