--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+attrs==25.4.0
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
 colorama==0.4.6
 distro==1.9.0
+frozenlist==1.8.0
 google-auth==2.40.3
 google-auth-oauthlib==1.2.2
 gspread==6.2.1
@@ -14,9 +19,11 @@ httplib2==0.30.0
 httpx==0.28.1
 idna==3.10
 jiter==0.11.0
+multidict==6.7.0
 oauth2client==4.1.3
 oauthlib==3.3.1
 openai==1.109.1
+propcache==0.4.1
 pyaes==1.6.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -34,3 +41,4 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+yarl==1.22.0
